--- a/Automation/Views/Home/Index.cshtml
+++ b/Automation/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         </div>
     </div>
 </div>
-<div class="row">
+<div class="row col-centered">
     <div class="col-md-12">
         <h2>Welcome to the SSE WinInf Monitoring and Automation Site</h2>
         <p>
@@ -34,8 +34,8 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
 
-    <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12" style="display: table">
+    <div class="row col-centered">
+        <div class="col-lg-4 col-md-6 col-sm-12 maxheight" style="display: table">
             <h3><img src="~/Images/scom.png" style="height: 100px; margin: 5px"><span style="vertical-align: top">SCOM Monitoring </span></h3>
             <div id="SCOMPartial" style="display: table">
                 Loading . . .
@@ -72,7 +72,10 @@
             $('#PSPartial').load('/PowerShell/GetPSPartial');
             $('#GPOPartial').load('/AD/GPOChart');
             $('#ADPartial').load('/AD/Index');
+
         });
+
+
 
         $(function () {
             setInterval(function () {
@@ -103,6 +106,9 @@
                 $(this).find('#SCOMAlert').html("<div id='SCOMAlert'>Loading . . .</div>");
             });
         });
+
+
+
 
     </script>
 }
