--- a/Automation/Views/Home/Index.cshtml
+++ b/Automation/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
         $(document).ready(function () {
             $('#SCOMPartial').load('/SCOM/GetPartial?partialName=_SCOM');
             $('#PSPartial').load('/PowerShell/GetPSPartial');
-            $('#GPOPartial').load('/AD/GPOChart');
+            //$('#GPOPartial').load('/AD/GPOChart');
             $('#ADPartial').load('/AD/Index');
 
         });
