Added better sizing to the graphpanels. Commit pre draggable additon.

--- a/Automation/Content/SCOMstylesheet.css
+++ b/Automation/Content/SCOMstylesheet.css
@@ -25,6 +25,17 @@
     text-align: center;
   }
 
+.cardvalue-left {
+    text-align: left;
+}
+
+.cardvalue-right {
+    text-align: right;
+}
+
+.cardvalue-center {
+    text-align: center;
+}
   .cardvalue {
     text-align: center;
   }
