--- a/Automation/Content/Site.css
+++ b/Automation/Content/Site.css
@@ -41,12 +41,10 @@ textarea {
     border-top: 2px solid black;
     border-bottom: 2px solid black;
     border-style: dashed;
+    width: auto;
+    height: 50px;
 }
 
-.maxheight {
-    max-height: 600px;
-    height: 600px;
-}
 
 /* New Panel Stuff */
 
@@ -54,10 +52,13 @@ textarea {
     background-color: lightgray
 }
 
+.nopadding {
+    padding: 0px;
+}
+
 .ui-sortable .panel-heading {
     cursor: move
 }
-
 
 .panel-title a {
     display: block
@@ -67,15 +68,31 @@ textarea {
     text-decoration: none
 }
 
-.panel {
+.cardpanel {
     border: none;
+    margin: 5px;
     -webkit-box-shadow: none;
     box-shadow: none;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    background-color: white;
-    width: 100%;
+    background-color: lightgrey;
+    height: 255px;
+    max-height: 300px;
+    width: 200px;
+}
+
+.bargraph {
+    width: 600px !important;
+    height: auto !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
+}
+.pieChart {
+    width: 350px !important;
+    height: auto !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
 }
 .panel.panel-no-rounded-corner .panel-body, .panel.panel-no-rounded-corner .panel-footer, .panel.panel-no-rounded-corner .panel-heading {
     -webkit-border-radius: 0 !important;
@@ -85,10 +102,11 @@ textarea {
 
 .panel-heading {
     padding: 10px 15px;
-    border: none
+    border: none;
+    height: 70px;
 }
 
-    .panel-heading + .slimScrollDiv, .panel-heading + .table, .panel-toolbar {
+.panel-heading + .slimScrollDiv, .panel-heading + .table, .panel-toolbar {
         border-top: 1px solid #eee
     }
 
@@ -96,7 +114,7 @@ textarea {
     float: right
 }
 
-    .panel-heading-btn > a {
+.panel-heading-btn > a {
         margin-left: 8px
     }
 
@@ -104,13 +122,13 @@ textarea {
     margin-top: -7px
 }
 
-    .panel-heading .btn-group .btn.btn-sm {
-        margin-top: -5px
-    }
+.panel-heading .btn-group .btn.btn-sm {
+    margin-top: -5px
+}
 
-    .panel-heading .btn-group .btn.btn-xs {
-        margin-top: -1px
-    }
+.panel-heading .btn-group .btn.btn-xs {
+    margin-top: -1px
+}
 
 .panel-heading .label.pull-left, .panel-heading .label.pull-right {
     line-height: 15px
@@ -191,7 +209,8 @@ textarea {
 
 .panel-body {
     padding: 15px;
-    background-color: lightgrey
+    background-color: lightgrey;
+    height: auto;
 }
 
 .panel-body.no-border {
