--- a/Automation/Views/Shared/_GPChart.cshtml
+++ b/Automation/Views/Shared/_GPChart.cshtml
@@ -1,45 +1,31 @@
 ﻿@using System.Text
 @model Automation.ViewModels.GPOViewModel
 
-<div class="col-lg-12 ui-sortable widgets">
-    <div class="panel panel-inverse">
-        <div class="panel-heading">
-            <div class="panel-heading-btn">
-                <a href="#" class="btn btn-xs btn-icon btn-warning" data-click="panel-collapse" title="Collapse Panel"><i class="fas fa-minus"></i></a>
+<div class="col ui-sortable widgets" style="min-width: 250px; min-height: 400px;">
+    <div class="row">
+        <div class="cardpanel pieChart panel-inverse">
+            <div class="panel-heading">
+                <div class="panel-heading-btn">
+                    <a href="#" class="btn btn-xs btn-icon btn-warning" data-click="panel-collapse" title="Collapse Panel"><i class="fas fa-minus"></i></a>
+                </div>
+                <h4 class="panel-title">GPO Health</h4>
             </div>
-            <h4 class="panel-title">GPO Health</h4>
-        </div>
-        <div class="panel-body">
-            <canvas id="chart-div"></canvas>
-        </div>
-    </div>
-    <div class="panel panel-inverse">
-        <div class="panel-heading">
-            <h4 class="panel-title">GPO Health</h4>
-        </div>
-        <div class="panel-body">
-            <canvas id="chart-div2"></canvas>
+            <div class="panel-body">
+                <canvas id="chart-div"></canvas>
+            </div>
         </div>
     </div>
 </div>
 <script type="text/javascript">
     $(".widgets").sortable({
         handle: ".panel-heading",
+        connectWith: ".sortable",
+        placeholder: "placeholder",
+        items: ".cardpanel",
         cursor: "move",
         opacity: 0.5,
-        stop: function (event, ui) {
-            $("#json").val(
-                JSON.stringify(
-                    $("#widgets").sortable(
-                        'toArray',
-                        {
-                            attribute: 'id'
-                        }
-                    )
-                )
-            );
-        }
     });
+
     var dynamicColours = function () {
         var r = Math.floor(Math.random() * 255);
         var g = Math.floor(Math.random() * 255);
@@ -64,6 +50,7 @@
         options: {
             title: {
                 display: true,
+                responsive: true,
                 text: "GPO Health '@Model.Domain'"
             }
         }
