--- a/Automation/Views/Shared/_Layout.cshtml
+++ b/Automation/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <div class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <div class="container">
             <div class="navbar-header">
+                <li><img src="~/Images/SSELogo.png" /></li>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -23,6 +24,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav mr-auto">
+                    
                     <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("About", "About", "Home", new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("PowerShell", "Index", "PowerShell", new { @class = "nav-link" })</li>
@@ -31,7 +33,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         @RenderBody()
         <hr />
         <footer>
